--- a/config/config.yaml
+++ b/config/config.yaml
@@ -28,6 +28,13 @@ model_trainer:
     test_data_path: artifacts/data_transformation/test.csv
     model_path: model.joblib
 
+model_evaluation:
+
+    root_dir: artifacts/model_evaluation
+    model_path: artifacts/model_trainer/model.joblib
+    test_data_path: artifacts/data_transformation/test.csv
+    metrics_path: artifacts/model_evaluation/metrics.json
+
 
   
 
